--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -38,25 +38,40 @@
 
    <div class="services">
       <div class="container">
-         <h1 class="title">Services</h1>
+         <h1>Services</h1>
 
          <div class="row clearfix">
             <div class="col-sm-4 service">
                <span class="fa fa-android"></span>
 
-               <p>Web & Mobile</p>
+               <p class="title">Web & Mobile</p>
+
+               <div class="gap"></div>
+
+               <p class="desc">Description about Web & Mobile service. Description about Web &
+                  Mobile service.</p>
             </div>
 
             <div class="col-sm-4 service">
                <span class="fa fa-map-marker"></span>
 
-               <p>GeoEngine & GeoDatastore</p>
+               <p class="title">GeoEngine & GeoDatastore</p>
+
+               <div class="gap"></div>
+
+               <p class="desc">Description about Web & Mobile service. Description about Web &
+                  Mobile service.</p>
             </div>
 
             <div class="col-sm-4 service">
                <span class="fa fa-database"></span>
 
-               <p>System & Server</p>
+               <p class="title">System & Server</p>
+
+               <div class="gap"></div>
+
+               <p class="desc">Description about Web & Mobile service. Description about Web &
+                  Mobile service.</p>
             </div>
          </div>
       </div>
@@ -73,9 +88,9 @@
       </div>
    </div>
 
-   <div class="work work1">
+   <div class="work aod">
       <div class="container clearfix">
-         {#         <h1 class="title">AOD</h1>#}
+         <h1 class="title">AOD</h1>
 
          <div class="image-wap">
             <img class="center-block img-responsive" src="{{ static('image/works/aod.png') }}"
@@ -84,9 +99,9 @@
       </div>
    </div>
 
-   <div class="work">
+   <div class="work lemaker">
       <div class="container clearfix">
-         {#         <h1 class="title">LeMaker</h1>#}
+         <h1>LeMaker</h1>
 
          <div class="image-wap">
             <img class="center-block img-responsive" src="{{ static('image/works/lemaker.png') }}"
@@ -95,24 +110,24 @@
       </div>
    </div>
 
-   <div class="work">
+   <div class="work lft">
       <div class="container clearfix">
-         {#         <h1 class="title">Tian Qing</h1>#}
+         <h1>Lifengtang</h1>
 
          <div class="image-wap">
-            <img class="center-block img-responsive" src="{{ static('image/works/tianqing.jpg') }}"
+            <img class="center-block img-responsive"
+                 src="{{ static('image/works/lifengtang.jpg') }}"
                  alt="">
          </div>
       </div>
    </div>
 
-   <div class="work">
+   <div class="work tq">
       <div class="container clearfix">
-         {#         <h1 class="title">Li Feng Tang</h1>#}
+         <h1>Tianqing</h1>
 
          <div class="image-wap">
-            <img class="center-block img-responsive"
-                 src="{{ static('image/works/lifengtang.jpg') }}"
+            <img class="center-block img-responsive" src="{{ static('image/works/tianqing.jpg') }}"
                  alt="">
          </div>
       </div>
@@ -153,7 +168,7 @@
          <h1 class="title">Process</h1>
 
          <div class="row">
-            <div class="col-sm-3 ">
+            <div class="col-sm-3 text-center">
                <p>Discover & Plan</p>
                <img src="http://placehold.it/150x150" alt=""/>
             </div>
@@ -186,10 +201,16 @@
             </div>
 
             <div class="col-sm-5">
-               <ul>
-                  <li>Address: Bowling Green, KY</li>
-                  <li>Email: hi@tuistudio.com</li>
-                  <li>Fax: TODO</li>
+               <ul class="list-unstyled">
+                  <li>
+                     <span class="fa fa-home"></span> Bowling Green, KY
+                  </li>
+                  <li>
+                     <span class="fa fa-envelope-o"></span> hi@tuistudio.com
+                  </li>
+                  <li>
+                     <span class="fa fa-fax"></span> 111-111-111
+                  </li>
                   <li>Tel: TODO</li>
                </ul>
             </div>
