--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -6,7 +6,7 @@
   }
 
   .market {
-    padding: 180px 0 20px 0;
+    padding: 140px 0 20px 0;
     background: url('/static/image/triangles.png') repeat;
     border-bottom: 1px solid #EEEEEE;
 
@@ -32,36 +32,49 @@
     }
   }
 
-  .title {
+  h1 {
     font-size: 30px;
     font-weight: normal;
     text-align: center;
-    margin: 50px 0;
+    margin: 70px 0 50px 0;
   }
 
   .services {
-    padding-bottom: 60px;
+    padding-bottom: 70px;
     background-color: #f8f8f8;
 
     .service {
       text-align: center;
 
-      span {
+      .fa {
         font-size: 80px;
         display: block;
         margin-bottom: 20px;
+      }
+
+      .title {
+        font-size: 18px;
+        margin-bottom: 15px;
+      }
+
+      .gap {
+        border-top: 1px solid gray;
+        width: 150px;
+        margin: 0 auto;
+        margin-bottom: 15px;
+      }
+
+      .desc {
+        padding: 0 20px;
       }
     }
   }
 
   .works {
     text-align: center;
-    padding-bottom: 30px;
-    margin-bottom: 60px;
-    border-bottom: 1px solid #dddddd;
+    padding-bottom: 70px;
 
     .title {
-      margin-bottom: 20px;
     }
 
     img {
@@ -84,7 +97,24 @@
   }
 
   .work {
-    margin-bottom: 60px;
+    padding: 0px 0 70px 0;
+    background-color: greenyellow;
+
+    &.aod {
+      background-color: rgb(93, 196, 173);
+    }
+
+    &.lemaker {
+      background-color: #ebeced;
+    }
+
+    &.tq {
+      background-color: @main-color;
+    }
+
+    &.lft {
+      background-color: rgb(200, 161, 91);
+    }
 
     .image-wap {
       height: 510px;
@@ -105,6 +135,8 @@
   }
 
   .tech {
+    padding-top: 70px;
+
     .tech-wap {
       width: 80%;
       padding-left: 20px;
@@ -132,17 +164,15 @@
   .contact {
     ul {
       padding: 30px 0 0 50px;
-      list-style-type: square;
       font-size: 16px;
 
       li {
         margin-bottom: 5px;
+
+        .fa {
+          margin-right: 10px;
+        }
       }
     }
   }
 }
-
-
-
-
-
