--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -58,10 +58,9 @@
       }
 
       .gap {
-        border-top: 1px solid gray;
+        border-top: 1px solid #cccccc;
         width: 150px;
-        margin: 0 auto;
-        margin-bottom: 15px;
+        margin: 0 auto 15px auto;
       }
 
       .desc {
@@ -80,18 +79,10 @@
     img {
       display: inline-block;
       height: 47px;
+      margin-left: 50px;
 
-      &.aod {
-        height: 45px;
-        margin-right: 100px;
-      }
-
-      &.lemaker {
-        margin-right: 80px;
-      }
-
-      &.optico {
-        height: 70px;
+      &:first-child {
+        margin-left: 0;
       }
     }
   }
@@ -102,6 +93,10 @@
 
     &.aod {
       background-color: rgb(93, 196, 173);
+
+      h1 {
+        color: #FFFFFF;
+      }
     }
 
     &.lemaker {
@@ -110,9 +105,17 @@
 
     &.tq {
       background-color: @main-color;
+
+      h1 {
+        color: #FFFFFF;
+      }
     }
 
     &.lft {
+      h1 {
+        color: #FFFFFF;
+      }
+
       background-color: rgb(200, 161, 91);
     }
 
@@ -134,23 +137,11 @@
     }
   }
 
-  .tech {
+  .techs {
     padding-top: 70px;
 
-    .tech-wap {
+    img {
       width: 80%;
-      padding-left: 20px;
-
-      .tech-item {
-        height: 80px;
-        margin-right: 20px;
-        margin-bottom: 20px;
-        vertical-align: top;
-
-        &:first-child {
-          margin-left: 0;
-        }
-      }
     }
   }
 
@@ -167,9 +158,10 @@
       font-size: 16px;
 
       li {
-        margin-bottom: 5px;
+        margin-bottom: 10px;
 
-        .fa {
+        .fa,
+        .glyphicon {
           margin-right: 10px;
         }
       }
