--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -185,7 +185,7 @@
             <div class="col-sm-5">
                <ul class="list-unstyled">
                   <li>
-                     <span class="fa fa-home"></span> Bowling Green, KY
+                     <span class="glyphicon glyphicon-home"></span> Bowling Green, KY
                   </li>
                   <li>
                      <span class="fa fa-envelope-o"></span> hi@tuistudio.com
