--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -23,7 +23,7 @@
                </a>
             </li>
             <li>
-               <a href="https://dribbble.com/tuistudio-admin" target="_blank" title="Dribbble">
+               <a href="https://dribbble.com/tuistudio" target="_blank" title="Dribbble">
                   <span class="fa fa-dribbble"></span>
                </a>
             </li>
