add phone number

--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -191,10 +191,10 @@
                      <span class="fa fa-envelope-o"></span> hi@tuistudio.com
                   </li>
                   <li>
-                     <span class="fa fa-fax"></span> 111-111-111
+                     <span class="fa fa-fax"></span> 1-111-111-1111
                   </li>
                   <li>
-                     <span class="glyphicon glyphicon-phone-alt"></span> 111-111-111
+                     <span class="glyphicon glyphicon-phone-alt"></span> 1-270-303-0721
                   </li>
                </ul>
             </div>
