update index page title

--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block page_id %}page-index{% endblock %}
-{% block page_title %}TUI Studio{% endblock %}
+{% block page_title %}TUI Studio | Boost Your Business With US{% endblock %}
 {% block page_css %}
    {{ link('css/site/index.css') }}
 {% endblock %}
