--- a/tuistudio/static/css/site/business.less
+++ b/tuistudio/static/css/site/business.less
@@ -17,6 +17,20 @@
     resize: vertical;
   }
 
+  // 表单错误
+  textarea.field-error,
+  input.field-error,
+  select.field-error + .trigger {
+    border: 1px solid red;
+  }
+
+  .project-type-selector.field-error {
+    label {
+      border-top-color: red;
+      border-bottom-color: #ff0000;
+    }
+  }
+
   .project-type-selector {
     .btn-primary {
       background-color: white;
