--- a/tuistudio/static/css/common.less
+++ b/tuistudio/static/css/common.less
@@ -1,5 +1,11 @@
 @import "utils";
 
+h1.legend {
+  border-bottom: 1px solid #cccccc;
+  padding-bottom: 15px;
+  margin-bottom: 25px;
+}
+
 // Text
 .text-error {
   color: red;
