--- a/tuistudio/templates/admin/index.html
+++ b/tuistudio/templates/admin/index.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "admin_layout.html" %}
 
 {% block page_title %}Admin - TUI Studio{% endblock %}
 {% block page_id %}page-admin{% endblock %}
@@ -6,7 +6,7 @@
 {% block page_content %}
    <div class="container">
       <h1>Dashboard</h1>
-   
+
       <table class="table table-bordered table-hover table-striped">
          <thead>
          <tr>
