--- a/tuistudio/static/css/layout.less
+++ b/tuistudio/static/css/layout.less
@@ -82,6 +82,12 @@ a {
       display: inline-block;
       padding-bottom: 20px;
       font-size: 22px;
+
+      sup {
+        font-size: 12px;
+        line-height: 1;
+        top: -1em;
+      }
     }
   }
 
