--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -5,29 +5,46 @@
     box-shadow: 0 0 5px rgba(0, 0, 0, .1);
   }
 
-  .market {
-    padding: 140px 0 20px 0;
-    background: url('/static/image/triangles.png') repeat;
+  .banner {
+    padding-top: 120px;
+    height: 600px;
+    background: url('/static/image/banner.png') no-repeat center center;
+    background-size: cover;
     border-bottom: 1px solid #EEEEEE;
+    color: white;
+    position: relative;
 
     h1 {
       font-size: 65px;
-      font-weight: normal;
+      font-weight: bold;
       margin-bottom: 20px;
     }
 
     p {
       font-size: 22px;
       margin-bottom: 140px;
-      color: #666;
     }
 
     .icons {
       text-align: center;
       font-size: 26px;
+      position: absolute;
+      display: block;
+      width: 100%;
+      left: 0;
+      bottom: 20px;
 
       li {
         padding: 0 8px;
+
+        a {
+          color: white;
+          opacity: .5;
+
+          &:hover {
+            opacity: 1;
+          }
+        }
       }
     }
   }
