--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block page_content %}
-   <div class="market">
+   <div class="banner">
       <div class="container">
          <h1 class="text-center">Boost Your Business With US</h1>
 
