--- a/tuistudio/static/css/site/business.less
+++ b/tuistudio/static/css/site/business.less
@@ -6,7 +6,7 @@
   }
 
   .form-wap {
-    width: 513px;
+    width: 494px;
   }
 
   .form-group {
@@ -58,12 +58,13 @@
   }
 
   .fancy-select {
-    width: 160px;
+    width: 154px;
     margin-left: 16px;
     float: left;
 
     .trigger {
       color: #555555;
+      padding: 10px 24px 10px 10px;
     }
 
     * {
