--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -10,7 +10,6 @@
     height: 600px;
     background: url('/static/image/banner.png') no-repeat center center;
     background-size: cover;
-    border-bottom: 1px solid #EEEEEE;
     color: white;
     position: relative;
 
@@ -18,6 +17,7 @@
       font-size: 65px;
       font-weight: bold;
       margin-bottom: 20px;
+      margin-top: 0;
     }
 
     p {
