--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -12,9 +12,11 @@
 {% block page_content %}
    <div class="banner">
       <div class="container">
-         <h1 class="text-center">Boost Your Business With US</h1>
+         <div class="banner-text">
+            <h1 class="text-center">Boost Your Business With US</h1>
 
-         <p class="text-center">TUI Studio is a passionate team focusing on Web solutions.</p>
+            <p class="text-center">TUI Studio is a passionate team focusing on Web solutions.</p>
+         </div>
 
          <ul class="icons list-inline list-unstyled">
             <li>
