change h1 font size for index page

--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -51,15 +51,15 @@
   }
 
   h1 {
-    font-size: 30px;
-    font-weight: normal;
+    font-size: 35px;
+    font-weight: lighter;
     text-align: center;
     margin: 70px 0 50px 0;
   }
 
   .services {
     padding-bottom: 70px;
-    background-color: #f8f8f8;
+    background-color: #EEEEEE;
 
     .service {
       text-align: center;
