replace service icons

--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -64,8 +64,10 @@
     .service {
       text-align: center;
 
-      .fa {
+      .fa,
+      .iconfont {
         font-size: 80px;
+        line-height: 1;
         display: block;
         margin-bottom: 20px;
       }
