--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -44,7 +44,7 @@
 
          <div class="row clearfix">
             <div class="col-sm-4 service">
-               <span class="fa fa-android"></span>
+               <i class="iconfont">&#xe600;</i>
 
                <p class="title">Web & Mobile</p>
 
@@ -55,7 +55,7 @@
             </div>
 
             <div class="col-sm-4 service">
-               <span class="fa fa-map-marker"></span>
+               <i class="iconfont">&#xe601;</i>
 
                <p class="title">GeoEngine & GeoDatastore</p>
 
@@ -66,7 +66,7 @@
             </div>
 
             <div class="col-sm-4 service">
-               <span class="fa fa-database"></span>
+               <i class="iconfont">&#xe602;</i>
 
                <p class="title">System & Server</p>
 
