--- a/tuistudio/static/css/common.css
+++ b/tuistudio/static/css/common.css
@@ -16,6 +16,22 @@
   font-weight: bold;
   src: url(/static/fonts/lato-bold-webfont.woff) format('woff');
 }
+@font-face {
+  font-family: 'iconfont';
+  src: url('/static/fonts/iconfont.eot');
+  src: url('/static/fonts/iconfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('/static/fonts/iconfont.woff') format('woff'), /* chrome、firefox */ url('/static/fonts/iconfont.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/ url('/static/fonts/iconfont.svg#uxiconfont') format('svg');
+  
+  /* IE9*/
+  /* iOS 4.1- */
+}
+.iconfont {
+  font-family: "iconfont" !important;
+  font-size: 16px;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+}
 h1.legend {
   border-bottom: 1px solid #cccccc;
   padding-bottom: 15px;
