--- a/tuistudio/static/css/site/index.css
+++ b/tuistudio/static/css/site/index.css
@@ -16,6 +16,22 @@
   font-weight: bold;
   src: url(/static/fonts/lato-bold-webfont.woff) format('woff');
 }
+@font-face {
+  font-family: 'iconfont';
+  src: url('/static/fonts/iconfont.eot');
+  src: url('/static/fonts/iconfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('/static/fonts/iconfont.woff') format('woff'), /* chrome、firefox */ url('/static/fonts/iconfont.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/ url('/static/fonts/iconfont.svg#uxiconfont') format('svg');
+  
+  /* IE9*/
+  /* iOS 4.1- */
+}
+.iconfont {
+  font-family: "iconfont" !important;
+  font-size: 16px;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+}
 #page-index .navbar {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
@@ -70,8 +86,10 @@
 #page-index .services .service {
   text-align: center;
 }
-#page-index .services .service .fa {
+#page-index .services .service .fa,
+#page-index .services .service .iconfont {
   font-size: 80px;
+  line-height: 1;
   display: block;
   margin-bottom: 20px;
 }
