--- a/tuistudio/static/css/utils.less
+++ b/tuistudio/static/css/utils.less
@@ -1,4 +1,4 @@
-// 字体 lato
+// lato
 @font-face {
   font-family: 'lato';
   font-style: normal;
@@ -18,6 +18,22 @@
   font-style: normal;
   font-weight: bold;
   src: url(/static/fonts/lato-bold-webfont.woff) format('woff');
+}
+
+// iconfont
+@font-face {
+  font-family: 'iconfont';
+  src: url('/static/fonts/iconfont.eot'); /* IE9*/
+  src: url('/static/fonts/iconfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('/static/fonts/iconfont.woff') format('woff'), /* chrome、firefox */ url('/static/fonts/iconfont.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/ url('/static/fonts/iconfont.svg#uxiconfont') format('svg'); /* iOS 4.1- */
+}
+
+.iconfont {
+  font-family: "iconfont" !important;
+  font-size: 16px;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 // 颜色
