--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -173,18 +173,64 @@
   }
 
   .contact {
-    ul {
-      padding: 30px 0 0 50px;
-      font-size: 16px;
 
-      li {
-        margin-bottom: 10px;
+    .map-wap {
+      position: relative;
 
-        .fa,
-        .glyphicon {
-          margin-right: 10px;
+      .contact-panel {
+        position: absolute;
+        padding: 40px 0 0 50px;
+        left: 50%;
+        height: 220px;
+        width: 500px;
+        top: 100px;
+        z-index: 1000;
+        background-color: rgba(255, 255, 255, .8);
+        box-shadow: 0 0 5px rgba(0, 0, 0, .25);
+        border-radius: 5px;
+
+        .title {
+          font-size: 24px;
+          margin-bottom: 15px;
         }
+
+        ul {
+
+          font-size: 16px;
+
+          li {
+            margin-bottom: 10px;
+
+            .fa,
+            .glyphicon {
+              margin-right: 10px;
+            }
+          }
+        }
+
+      }
+
+      #map-canvas {
+        height: 460px;
       }
     }
+
+    //    ul {
+    //      padding: 30px 0 0 50px;
+    //      font-size: 16px;
+    //
+    //      li {
+    //        margin-bottom: 10px;
+    //
+    //        .fa,
+    //        .glyphicon {
+    //          margin-right: 10px;
+    //        }
+    //      }
+    //    }
+  }
+
+  .footer {
+    margin-top: 0;
   }
 }
