--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -18,6 +18,7 @@
    {{ script('bower_components/jquery/dist/jquery.min.js') }}
    {{ script('bower_components/bootstrap/dist/js/bootstrap.min.js') }}
    {{ script('bower_components/jquery.scrollTo/jquery.scrollTo.min.js') }}
+   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 </head>
 
 <body id="{% block page_id %}{% endblock %}">
