--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -176,29 +176,47 @@
    </div>
 
    <div class="contact">
-      <div class="container">
-         <h1 class="title">Contact</h1>
+      {#      <div class="container">#}
+      <h1 class="title">Contact</h1>
 
-         <div class="row">
-            <div class="col-sm-7">
-               <img class="img-responsive" src="{{ static('image/usa_map.jpg') }}" alt=""/>
-            </div>
-
-            <div class="col-sm-5">
-               <ul class="list-unstyled">
-                  <li>
-                     <span class="glyphicon glyphicon-home"></span> Bowling Green, KY
-                  </li>
-                  <li>
-                     <span class="fa fa-envelope-o"></span> hi@tuistudio.com
-                  </li>
-                  <li>
-                     <span class="glyphicon glyphicon-phone-alt"></span> 1-270-303-0721
-                  </li>
-               </ul>
-            </div>
+      <div class="map-wap">
+         <div class="contact-panel">
+            <div class="title">Please feel free to contact us anytime.</div>
+            <ul class="list-unstyled">
+               <li>
+                  <span class="glyphicon glyphicon-home"></span> Bowling Green, KY
+               </li>
+               <li>
+                  <span class="fa fa-envelope-o"></span> hi@tuistudio.com
+               </li>
+               <li>
+                  <span class="glyphicon glyphicon-phone-alt"></span> 1-270-303-0721
+               </li>
+            </ul>
          </div>
+         <div id="map-canvas"></div>
       </div>
+
+      {#         <div class="row">#}
+      {#            <div class="col-sm-7">#}
+      {#               <img class="img-responsive" src="{{ static('image/usa_map.jpg') }}" alt=""/>#}
+      {#            </div>#}
+      {##}
+      {#            <div class="col-sm-5">#}
+      {#               <ul class="list-unstyled">#}
+      {#                  <li>#}
+      {#                     <span class="glyphicon glyphicon-home"></span> Bowling Green, KY#}
+      {#                  </li>#}
+      {#                  <li>#}
+      {#                     <span class="fa fa-envelope-o"></span> hi@tuistudio.com#}
+      {#                  </li>#}
+      {#                  <li>#}
+      {#                     <span class="glyphicon glyphicon-phone-alt"></span> 1-270-303-0721#}
+      {#                  </li>#}
+      {#               </ul>#}
+      {#            </div>#}
+      {#         </div>#}
+      {#      </div>#}
    </div>
 
    {#   <div>#}
