--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -186,8 +186,8 @@
         top: 100px;
         z-index: 1000;
         background-color: rgba(255, 255, 255, .95);
-        box-shadow: 0 0 5px rgba(0, 0, 0, .25);
-        border-radius: 5px;
+        box-shadow: 0 0 6px rgba(0, 0, 0, 0.25);
+        border-radius: 4px;
 
         .title {
           font-size: 24px;
