update text in index page

--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -40,7 +40,7 @@
 
    <div class="services">
       <div class="container">
-         <h1>Services</h1>
+         <h1>SERVICES</h1>
 
          <div class="row clearfix">
             <div class="col-sm-4 service">
@@ -80,7 +80,7 @@
    </div>
 
    <div class="container works">
-      <h1 class="title">Our Works</h1>
+      <h1 class="title">WORKS</h1>
 
       <div class="row clearfix">
          <img src="{{ static('image/aod_gray.png') }}" class="aod-logo" data-scroll-target="aod"
@@ -141,7 +141,7 @@
 
    <div class="techs">
       <div class="container">
-         {#         <h1 class="title">Technologies we use</h1>#}
+         <h1 class="title">TECHS</h1>
 
          <img class="img-responsive center-block" src="{{ static('image/techs.png') }}" alt=""/>
       </div>
@@ -149,7 +149,7 @@
 
    <div class="process">
       <div class="container">
-         <h1 class="title">Process</h1>
+         <h1 class="title">PROCESS</h1>
 
          <div class="row">
             <div class="col-sm-3 text-center">
@@ -177,14 +177,14 @@
 
    <div class="contact">
       {#      <div class="container">#}
-      <h1 class="title">Contact</h1>
+      <h1 class="title">CONTACT</h1>
 
       <div class="map-wap">
          <div class="contact-panel">
             <div class="title">Please feel free to contact us anytime.</div>
             <ul class="list-unstyled">
                <li>
-                  <span class="glyphicon glyphicon-home"></span> Bowling Green, KY
+                  <span class="glyphicon glyphicon-home"></span> 1012 E 10th Ave, Bowling Green, KY
                </li>
                <li>
                   <span class="fa fa-envelope-o"></span> hi@tuistudio.com
