update text in index page

--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -184,13 +184,13 @@
             <div class="title">Please feel free to contact us anytime.</div>
             <ul class="list-unstyled">
                <li>
-                  <span class="glyphicon glyphicon-home"></span> 1012 E 10th Ave, Bowling Green, KY
-               </li>
-               <li>
                   <span class="fa fa-envelope-o"></span> hi@tuistudio.com
                </li>
                <li>
                   <span class="glyphicon glyphicon-phone-alt"></span> 1-270-303-0721
+               </li>
+               <li>
+                  <span class="glyphicon glyphicon-home"></span> 1012 E 10th Ave, Bowling Green, KY 42103
                </li>
             </ul>
          </div>
