--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -123,6 +123,14 @@
       background-color: #ebeced;
     }
 
+    &.zj {
+      background-color: rgb(17, 94, 172);
+
+      h1 {
+        color: #ffffff;
+      }
+    }
+
     &.tq {
       background-color: @main-color;
 
@@ -158,8 +166,6 @@
   }
 
   .techs {
-    padding-top: 90px;
-
     img {
       width: 80%;
     }
