--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -87,6 +87,8 @@
               alt="AOD"/>
          <img src="{{ static('image/lemaker_gray.png') }}" class="lemaker-logo"
               data-scroll-target="lemaker" alt="LeMaker"/>
+         <img src="{{ static('image/aod_gray.png') }}" class="zj-logo" data-scroll-target="zj"
+              alt="Zhongjie"/>
          <img src="{{ static('image/aod_gray.png') }}" class="tq-logo" data-scroll-target="tq"
               alt="Tianqing"/>
          <img src="{{ static('image/lemaker_gray.png') }}" class="lft-logo"
@@ -112,6 +114,17 @@
          <div class="image-wap">
             <img class="center-block img-responsive" src="{{ static('image/works/lemaker.png') }}"
                  alt="">
+         </div>
+      </div>
+   </div>
+
+   <div class="work zj">
+      <div class="container clearfix">
+         <h1>Zhongjie</h1>
+
+         <div class="image-wap">
+            <img class="center-block img-responsive"
+                 src="{{ static('image/works/zj.jpg') }}" alt="">
          </div>
       </div>
    </div>
@@ -190,7 +203,8 @@
                   <span class="glyphicon glyphicon-phone-alt"></span> 1-270-303-0721
                </li>
                <li>
-                  <span class="glyphicon glyphicon-home"></span> 1012 E 10th Ave, Bowling Green, KY 42103
+                  <span class="glyphicon glyphicon-home"></span> 1012 E 10th Ave, Bowling Green, KY
+                  42103
                </li>
             </ul>
          </div>
