--- a/tuistudio/static/css/site/index.css
+++ b/tuistudio/static/css/site/index.css
@@ -128,10 +128,10 @@
   color: #FFFFFF;
 }
 #page-index .work.lemaker {
-  background-color: #ebeced;
+  background-color: #bfd6d9;
 }
 #page-index .work.zj {
-  background-color: #115eac;
+  background-color: #3382D3;
 }
 #page-index .work.zj h1 {
   color: #ffffff;
