--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -120,11 +120,11 @@
     }
 
     &.lemaker {
-      background-color: #ebeced;
+      background-color: #bfd6d9;
     }
 
     &.zj {
-      background-color: rgb(17, 94, 172);
+      background-color: #3382D3;
 
       h1 {
         color: #ffffff;
